// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Single Token in group 1`] = `
":host {
  --pl-single: 45deg;
}
"
`;

exports[`Single Token in group 2`] = `
"/**
@value "45deg"
**/
export const single = "var(--pl-single)" as const
"
`;

exports[`Nested token group (2 levels) 1`] = `
":host {
  --pl-one-two: 20%;
}
"
`;

exports[`Nested token group (2 levels) 2`] = `
"/**
@value "20%"
**/
export const oneTwo = "var(--pl-one-two)" as const
"
`;

exports[`Color hex 1`] = `
":host {
  --pl-colors-white-1: #fff;
}
"
`;

exports[`Color hex 2`] = `
"/**
@value "#fff"
**/
export const colorsWhite1 = "var(--pl-colors-white-1)" as const
"
`;

exports[`mediaQueries: screen 1`] = `
":host {
  --pl-size-100: 2rem;
}
@media screen and (max-width: 767px) {
  :host {
    --pl-size-100: 2rem;
  }
}
:host([data-media-query="@mobile"]) {
  --pl-size-100: 2rem;
}
@media screen and (min-width: 1024px) {
  :host {
    --pl-size-100: 3rem;
  }
}
:host([data-media-query="@desktop"]) {
  --pl-size-100: 3rem;
}
@media screen and (min-width: 1920px) {
  :host {
    --pl-size-100: 4rem;
  }
}
:host([data-media-query="@tv"]) {
  --pl-size-100: 4rem;
}
"
`;

exports[`mediaQueries: screen 2`] = `
"/**
@value {
  "@desktop": "3rem",
  "@tv": "4rem",
  "@mobile": "2rem"
}
**/
export const size100 = "var(--pl-size-100)" as const
"
`;

exports[`mediaQueries:m colorScheme 1`] = `
":host {
  --pl-gray: oklch(100% 0 0 / 0.5);
}
@media (prefers-color-scheme: light) {
  :host {
    --pl-gray: oklch(100% 0 0 / 0.5);
  }
}
:host([data-media-query="@light"]) {
  --pl-gray: oklch(100% 0 0 / 0.5);
}
@media (prefers-color-scheme: dark) {
  :host {
    --pl-gray: oklch(0% 0 0 / 0.5);
  }
}
:host([data-media-query="@dark"]) {
  --pl-gray: oklch(0% 0 0 / 0.5);
}
"
`;

exports[`mediaQueries:m colorScheme 2`] = `
"/**
@value {
  "@dark": {
    "l": "0%",
    "c": 0,
    "h": 0,
    "a": 0.5
  },
  "@light": {
    "l": "100%",
    "c": 0,
    "h": 0,
    "a": 0.5
  }
}
**/
export const gray = "var(--pl-gray)" as const
"
`;

exports[`mediaQueries 1`] = `
":host {
  --pl-size-dynamic-100: 2rem;
  --pl-colors-background-primary: oklch(0% 0 0 / 0.5);
}
@media screen and (max-width: 767px) {
  :host {
    --pl-size-dynamic-100: 2rem;
  }
}
:host([data-media-query="@mobile"]) {
  --pl-size-dynamic-100: 2rem;
}
@media screen and (min-width: 1024px) {
  :host {
    --pl-size-dynamic-100: 3rem;
  }
}
:host([data-media-query="@desktop"]) {
  --pl-size-dynamic-100: 3rem;
}
@media screen and (min-width: 1920px) {
  :host {
    --pl-size-dynamic-100: 4rem;
  }
}
:host([data-media-query="@tv"]) {
  --pl-size-dynamic-100: 4rem;
}
@media (prefers-color-scheme: light) {
  :host {
    --pl-colors-background-primary: oklch(100% 0 0 / 0.5);
  }
}
:host([data-media-query="@light"]) {
  --pl-colors-background-primary: oklch(100% 0 0 / 0.5);
}
@media (prefers-color-scheme: dark) {
  :host {
    --pl-colors-background-primary: oklch(0% 0 0 / 0.5);
  }
}
:host([data-media-query="@dark"]) {
  --pl-colors-background-primary: oklch(0% 0 0 / 0.5);
}
"
`;

exports[`mediaQueries 2`] = `
"/**
@value {
  "@tv": "4rem",
  "@mobile": "2rem",
  "@desktop": "3rem"
}
**/
export const sizeDynamic100 = "var(--pl-size-dynamic-100)" as const
/**
@value {
  "@light": {
    "l": "100%",
    "c": 0,
    "h": 0,
    "a": 0.5
  },
  "@dark": {
    "l": "0%",
    "c": 0,
    "h": 0,
    "a": 0.5
  }
}
**/
export const colorsBackgroundPrimary = "var(--pl-colors-background-primary)" as const
"
`;

exports[`alias 1`] = `
":host {
  --pl-colors-gray-100: oklch(98.21% 0 0 / none);
  --pl-surface-secondary-100: var(--pl-colors-gray-100);
}
"
`;

exports[`alias 2`] = `
"/**
@value {
  "l": "98.21%",
  "c": 0,
  "h": 0
}
**/
export const colorsGray100 = "var(--pl-colors-gray-100)" as const
/**
@value {
  "l": "98.21%",
  "c": 0,
  "h": 0
}
**/
export const surfaceSecondary100 = colorsGray100
"
`;

exports[`alias + mediaQueries 1`] = `
":host {
  --pl-colors-white-100: #fff;
  --pl-colors-charcoal-100: oklch(18.31% 0.004 285.99 / none);
  --pl-surface-secondary-100: var(--pl-colors-white-100);
}
@media (prefers-color-scheme: light) {
  :host {
    --pl-surface-secondary-100: var(--pl-colors-white-100);
  }
}
:host([data-media-query="@light"]) {
  --pl-surface-secondary-100: var(--pl-colors-white-100);
}
@media (prefers-color-scheme: dark) {
  :host {
    --pl-surface-secondary-100: var(--pl-colors-charcoal-100);
  }
}
:host([data-media-query="@dark"]) {
  --pl-surface-secondary-100: var(--pl-colors-charcoal-100);
}
"
`;

exports[`alias + mediaQueries 2`] = `
"/**
@value "#fff"
**/
export const colorsWhite100 = "var(--pl-colors-white-100)" as const
/**
@value {
  "l": "18.31%",
  "c": 0.004,
  "h": 285.99
}
**/
export const colorsCharcoal100 = "var(--pl-colors-charcoal-100)" as const
/**
@value {
  "@light": "{colors.white.100}",
  "@dark": "{colors.charcoal.100}"
}
**/
export const surfaceSecondary100 = "var(--pl-surface-secondary-100)" as const
"
`;

exports[`function tokens 1`] = `
":host {
  --pl-gradient-color-1: oklch(0% 0 0 / 0.5);
  --pl-gradient-color-2: oklch(100% 0 0 / 0.5);
  --pl-gradient-stop-1: var(--pl-gradient-color-1) 20%;
  --pl-gradient-stop-2: var(--pl-gradient-color-2) 80%;
  --pl-gradient-primary: linear-gradient(
    45deg,
    var(--pl-gradient-stop-1),
    var(--pl-gradient-stop-2)
  );
}
"
`;

exports[`function tokens 2`] = `
"/**
@value {
  "l": "0%",
  "c": 0,
  "h": 0,
  "a": 0.5
}
**/
export const gradientColor1 = "var(--pl-gradient-color-1)" as const
/**
@value {
  "l": "100%",
  "c": 0,
  "h": 0,
  "a": 0.5
}
**/
export const gradientColor2 = "var(--pl-gradient-color-2)" as const
/**
@value [
  "{gradient.color.1}",
  "20%"
]
**/
export const gradientStop1 = "var(--pl-gradient-stop-1)" as const
/**
@value [
  "{gradient.color.2}",
  "80%"
]
**/
export const gradientStop2 = "var(--pl-gradient-stop-2)" as const
/**
@value {
  "function": "linear-gradient",
  "arguments": [
    "45deg",
    "{gradient.stop.1}",
    "{gradient.stop.2}"
  ]
}
**/
export const gradientPrimary = "var(--pl-gradient-primary)" as const
"
`;

exports[`query methods: single gradient token 1`] = `
{
  "$csv": true,
  "$description": "mock description",
  "$type": "function",
  "$value": {
    "arguments": [
      "45deg",
      "{gradient.stop.1}",
      "{gradient.stop.2}",
    ],
    "function": "linear-gradient",
  },
  "cssVar": "--pl-gradient-primary",
  "dependencies": [
    "{gradient.stop.1}",
    "{gradient.stop.2}",
  ],
  "dependents": [],
  "exportName": "gradientPrimary",
}
`;

exports[`query methods: color token only 1`] = `
[
  [
    "{gradient.color.1}",
    {
      "$description": "mock description",
      "$type": "color",
      "$value": {
        "a": 0.5,
        "c": 0,
        "h": 0,
        "l": "0%",
      },
      "cssVar": "--pl-gradient-color-1",
      "dependencies": [],
      "dependents": [
        "{gradient.stop.1}",
      ],
      "exportName": "gradientColor1",
    },
  ],
  [
    "{gradient.color.2}",
    {
      "$description": "mock description",
      "$type": "color",
      "$value": {
        "a": 0.5,
        "c": 0,
        "h": 0,
        "l": "100%",
      },
      "cssVar": "--pl-gradient-color-2",
      "dependencies": [],
      "dependents": [
        "{gradient.stop.2}",
      ],
      "exportName": "gradientColor2",
    },
  ],
]
`;

exports[`query methods: all tokens 1`] = `
[
  [
    "{gradient.color.1}",
    {
      "$description": "mock description",
      "$type": "color",
      "$value": {
        "a": 0.5,
        "c": 0,
        "h": 0,
        "l": "0%",
      },
      "cssVar": "--pl-gradient-color-1",
      "dependencies": [],
      "dependents": [
        "{gradient.stop.1}",
      ],
      "exportName": "gradientColor1",
    },
  ],
  [
    "{gradient.color.2}",
    {
      "$description": "mock description",
      "$type": "color",
      "$value": {
        "a": 0.5,
        "c": 0,
        "h": 0,
        "l": "100%",
      },
      "cssVar": "--pl-gradient-color-2",
      "dependencies": [],
      "dependents": [
        "{gradient.stop.2}",
      ],
      "exportName": "gradientColor2",
    },
  ],
  [
    "{gradient.stop.1}",
    {
      "$description": "mock description",
      "$value": [
        "{gradient.color.1}",
        "20%",
      ],
      "cssVar": "--pl-gradient-stop-1",
      "dependencies": [
        "{gradient.color.1}",
      ],
      "dependents": [
        "{gradient.primary}",
      ],
      "exportName": "gradientStop1",
    },
  ],
  [
    "{gradient.stop.2}",
    {
      "$description": "mock description",
      "$value": [
        "{gradient.color.2}",
        "80%",
      ],
      "cssVar": "--pl-gradient-stop-2",
      "dependencies": [
        "{gradient.color.2}",
      ],
      "dependents": [
        "{gradient.primary}",
      ],
      "exportName": "gradientStop2",
    },
  ],
  [
    "{gradient.primary}",
    {
      "$csv": true,
      "$description": "mock description",
      "$type": "function",
      "$value": {
        "arguments": [
          "45deg",
          "{gradient.stop.1}",
          "{gradient.stop.2}",
        ],
        "function": "linear-gradient",
      },
      "cssVar": "--pl-gradient-primary",
      "dependencies": [
        "{gradient.stop.1}",
        "{gradient.stop.2}",
      ],
      "dependents": [],
      "exportName": "gradientPrimary",
    },
  ],
]
`;
